k8s/manifest/deployment.yaml

# This is the sample deployment manifest file for a simple web application
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-web-app
  labels:
    app: go-web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-web-app
  template:
    metadata:
      labels:
        app: go-web-app
    spec:
      containers:
      - name: go-web-app
        image: biswajitstack/go-web-devops:v1
        ports:
        - containerPort: 8080
